Add Label to Sample

--- a/src/main/resources/templates/groups/index.html
+++ b/src/main/resources/templates/groups/index.html
@@ -7,7 +7,7 @@
 
 <div class="container">
 
-    <div class="page-heading">
+    <div class="page-header">
         <h2>
             Groups
         </h2>
@@ -16,7 +16,7 @@
 
         <div class="row">
             <div class="col-md-10">
-                <table class="table table-hover table-condensed table-selectable" id="jqp-groups">
+                <table class="table table-hover table-selectable" id="jqp-groups">
                     <tr>
                         <th></th>
                         <th>
