--- a/src/main/resources/templates/samples/table.html
+++ b/src/main/resources/templates/samples/table.html
@@ -41,7 +41,7 @@
 
     <script id="sample-template" type="text/x-handlebars-template" th:fragment="template">
         <tr>
-            <td>
+            <td width="15%">
                 <a href="/samples/show/{{ barcode }}">
                     {{ barcode }}
                 </a>
