--- a/src/main/resources/templates/samples/request.html
+++ b/src/main/resources/templates/samples/request.html
@@ -9,7 +9,7 @@
 
 <div class="container">
     <p th:text="${request.amount}"></p>
-    <p th:text="${request.type.name}"></p>
+    <p th:text="${request.type.value}"></p>
 </div>
 
 <div th:replace="fragments/common :: footer"></div>
