--- a/src/main/resources/templates/samples/table.html
+++ b/src/main/resources/templates/samples/table.html
@@ -16,10 +16,10 @@
                     Barcode
                 </th>
                 <th>
-                    Main Label
+                    Main Alias
                 </th>
                 <th>
-                    Type name
+                    Type
                 </th>
                 <th>
                     Status
@@ -47,10 +47,10 @@
                 </a>
             </td>
             <td>
-                {{ mainLabel.name }}
+                {{ mainAlias.name }}
             </td>
             <td>
-                {{ type.name }}
+                {{ type.value }}
             </td>
             <td>
                 {{ status.value }}
