--- a/src/main/resources/templates/work/index.html
+++ b/src/main/resources/templates/work/index.html
@@ -15,7 +15,22 @@
 
     <div class="col-md-12">
         <div class="row">
-            <h3>Choose workflow</h3>
+            <h3>Choose Product</h3>
+
+            <div class="form-group">
+                <select name="product" id="products" class="form-control">
+                    <option value=""></option>
+                </select>
+            </div>
+
+            <h3>Groups</h3>
+
+            only groups of type that fits workflow
+
+            <h3>Samples</h3>
+
+            <div th:replace="samples/table :: samplestable (${'append-samples'}, ${'load-samples'}, ${'metadata-samples'})"></div>
+
         </div>
 
         <div class="row">
@@ -24,14 +39,20 @@
     </div>
 
     <!--<div class="col-md-2">-->
-        <!--<ul class="nav nav-pills nav-stacked">-->
-            <!--<li class="active"><a href="#">Home</a></li>-->
-            <!--<li><a href="#">Profile</a></li>-->
-            <!--<li><a href="#">Messages</a></li>-->
-        <!--</ul>-->
+    <!--<ul class="nav nav-pills nav-stacked">-->
+    <!--<li class="active"><a href="#">Home</a></li>-->
+    <!--<li><a href="#">Profile</a></li>-->
+    <!--<li><a href="#">Messages</a></li>-->
+    <!--</ul>-->
     <!--</div>-->
 
 </div>
+
+<script id="select-template" type="text/x-handlebars-template">
+    <option value="{{ index }}">
+        {{ name }}
+    </option>
+</script>
 
 
 <div th:replace="fragments/common :: footer"></div>
@@ -39,19 +60,54 @@
 <script type="application/javascript">
     $(document).ready(function () {
 
-        $('.jqp-samples').pager({
-            url: '/samples/json/',
-            template: '#sample-template',
-            loadButton: '#jqp-load-more-samples',
-            appendBefore: '#jqp-append-before-samples',
-            metadata: '#jqp-metadata-samples'
-        });
+        // compile template using Handlebars
 
-        $('#jqp-groups').pager({
-            url: '/groups/json/',
-            template: '#group-template',
-            loadButton: '#jqp-load-more-groups',
-            appendBefore: '#jqp-append-before-groups'
+        var $template = $('#select-template');
+        var $products = $('#products');
+
+        var source = $template.html();
+        var template = Handlebars.compile(source);
+
+        var productQuery = $.ajax('http://localhost:8081/products/');
+
+        productQuery.then(function (data) {
+            var products = data._embedded.products;
+            $.each(products, function (index, product) {
+                var sampleHtml = $.map($.makeArray(product), function (product) {
+                    product.index = index;
+                    return template(product);
+                });
+
+                $products.append(sampleHtml);
+            });
+
+            $products.on('change', function (e) {
+                var optionSelected = $("option:selected", this);
+                var valueSelected = this.value;
+
+                var validTypes = [];
+
+                $.each(products[valueSelected].inputMaterial, function (index, material) {
+                    validTypes.push(material.type.value);
+                });
+
+                console.log(validTypes);
+
+                $('.jqp-samples').pager({
+                    url: '/samples/byType',
+                    template: '#sample-template',
+                    loadButton: '#load-samples',
+                    appendBefore: '#append-samples',
+                    metadata: '#metadata-samples',
+                    scrollLoad: true,
+                    data: {
+                        types: validTypes.join(',')
+                    }
+                });
+            });
+
+        }, function (status, code, c) {
+
         });
 
     });
