Changing product in work order now works as intended (samples are refiltered appropriately)

--- a/src/main/resources/templates/groups/show.html
+++ b/src/main/resources/templates/groups/show.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="children" th:if="*{children != null}">
-                <h3>Children Groups</h3>
+                <h3>Sub Groups</h3>
 
                 <ul>
                     <li th:each="child : *{children}">
