--- a/src/main/resources/templates/work/index.html
+++ b/src/main/resources/templates/work/index.html
@@ -15,9 +15,10 @@
 
     <div class="col-md-12">
         <div class="row">
-            <h3>Choose Product</h3>
-
             <div class="form-group">
+                <label for="products" class="h3">
+                    Choose product
+                </label>
                 <select name="product" id="products" class="form-control">
                     <option value=""></option>
                 </select>
@@ -100,7 +101,7 @@
                 loadButton: '#load-samples',
                 appendBefore: '#append-samples',
                 metadata: '#metadata-samples',
-                scrollLoad: true,
+                scrollLoad: false,
                 preload: false
             });
 
