--- a/src/main/resources/templates/groups/table.html
+++ b/src/main/resources/templates/groups/table.html
@@ -6,55 +6,42 @@
 </head>
 <body>
 
-<div th:fragment="samplestable (appendBeforeId, loadMoreId, metadataId)">
+<div th:fragment="groupstable (appendBeforeId, loadMoreId, metadataId)">
     <div th:fragment="table (appendBeforeId, loadMoreId, metadataId)">
         <div class="text-muted pull-right jqp-metadata" th:id="${metadataId}">
         </div>
-        <table class="table table-striped table-condensed jqp-samples">
+        <table class="table table-striped table-condensed jqp-groups">
             <tr>
                 <th>
-                    Barcode
+                    Name
                 </th>
                 <th>
-                    Main Alias
+                    Sample Count
                 </th>
                 <th>
-                    Type
-                </th>
-                <th>
-                    Status
-                </th>
-                <th>
+                    Details
                 </th>
             </tr>
             <tr class="jqp-append-before" th:id="${appendBeforeId}">
                 <td colspan="7" class="text-center">
                     <a href="#" class="btn btn-default jqp-load-more" th:id="${loadMoreId}">
-                        Load More Samples...
+                        Load More Groups...
                     </a>
                 </td>
             </tr>
         </table>
     </div>
 
-    <script id="sample-template" type="text/x-handlebars-template" th:fragment="template">
+    <script id="group-template" type="text/x-handlebars-template" th:fragment="template">
         <tr>
-            <td width="15%">
-                <a href="/samples/show/{{ barcode }}">
-                    {{ barcode }}
-                </a>
+            <td>
+                {{ name }}
             </td>
             <td>
-                {{ mainAlias.name }}
+                {{ samples.length }}
             </td>
             <td>
-                {{ type.value }}
-            </td>
-            <td>
-                {{ status.value }}
-            </td>
-            <td>
-                <a href="/samples/show/{{ barcode }}/">
+                <a href="/groups/show/{{ id }}/">
                     <span class="glyphicon glyphicon-eye-open"></span>
                     View
                 </a>
